--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,24 @@
 name: flutter_time_tracker
-description: A new Flutter project.
-publish_to: 'none'
+description: A time tracking app built with Flutter
 
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.0.0
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.18.1
+  provider: ^6.0.5
+  collection: ^1.17.2
+  shared_preferences: ^2.2.2
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
